log
Thu 09 Mar 2023 03:50:45 PM UTC: 
 exercises.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  0|7
total_score: 0/70
06b5c26
Thu 09 Mar 2023 04:16:26 PM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:19:7: error: invalid type argument of unary ‘*’ (have ‘int’)
   19 |   a = *temp;
      |       ^~~~~
Compilation failed
78643a2
Thu 09 Mar 2023 04:16:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:19:5: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   19 |   a = temp;
      |     ^
cc1: all warnings being treated as errors
Compilation failed
58e7c48
Thu 09 Mar 2023 04:16:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
a6a8665
Thu 09 Mar 2023 04:26:41 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:51:17: error: ‘p’ is a pointer; did you mean to use ‘->’?
   51 |   scanf("%s", &p.nombre);
      |                 ^
      |                 ->
exercises.c:52:17: error: ‘p’ is a pointer; did you mean to use ‘->’?
   52 |   scanf("%s", &p.rut);
      |                 ^
      |                 ->
exercises.c:53:17: error: ‘p’ is a pointer; did you mean to use ‘->’?
   53 |   scanf("%d", &p.edad);
      |                 ^
      |                 ->
Compilation failed
ccafb47
